Revision history for {{$dist->name}}

{{$NEXT}}

3.001     2022-12-01 11:55:43-05:00 America/New_York
        - no changes, just stable

3.000     2022-11-03 21:29:21-04:00 America/New_York (TRIAL RELEASE)
        - Log::Dispatchouli now requires v5.20, for pair slices
        - structured event logging with ->log_event -- read the docs, and Log::Fmt

2.023     2021-06-18 21:52:17-04:00 America/New_York
        - update author contact info
        - add perl-support section

2.022     2020-08-24 13:50:15-04:00 America/New_York
        - don't duplicate pid in syslog!

2.021     2020-08-12 11:48:57-04:00 America/New_York
        - add another experimental means to replace how Syslog output is set up

2.020     2020-02-06 13:45:44-05:00 America/New_York (TRIAL RELEASE)
        - add stdio_dispatcher_class, so you can subclass the Screen dispatcher
          for stderr and stdio; this is experimental!

2.019     2019-07-27 16:13:30-04:00 America/New_York
        - fix an initialization ordering bug for loggers using stdio

2.018     2019-07-26 18:36:56-04:00 America/New_York
        - add enable_stdout and enable_stderr to, uh, enable stdout and enable
          stderr (after initial construction)

2.017     2019-03-12 21:10:26-04:00 America/New_York
        - syslog_socket can now be supplied to replace the native socket for
          Sys::Syslog (thanks, Jon Stuart!)

2.016     2018-02-21 12:47:46-05:00 America/New_York
        - the Proxy logger now respects the same overloading as the root logger
        - muted works as a constructor argument (thanks, Dan Book)

2.015     2016-10-17 15:42:54-04:00 America/New_York
        - Log::Dispatchouli subclass can now provide its own proxy_class
          method to use something other than Log::Dispatchouli::Proxy

2.014     2016-10-14 18:28:36-04:00 America/New_York
        - non-trial release of v2.013

2.013     2016-07-30 16:34:57-04:00 America/New_York (TRIAL RELEASE)