@@ -3,6 +3,8 @@ use warnings;
 package Log::Fmt;
 # ABSTRACT: a little parser and emitter of structured log lines
 
+use experimental 'postderef'; # Not dangerous.  Is accepted without changed.
+
 use Params::Util qw(_ARRAY0 _HASH0 _CODELIKE);
 use Scalar::Util qw(refaddr);
 
