@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - restore v5.20 compatibility by turning on "postderef" feature
+          explicitly
 
 3.001     2022-12-01 11:55:43-05:00 America/New_York
         - no changes, just stable
